--- a/mexTool/Properties/Resources.resx
+++ b/mexTool/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="category_fighter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\category_fighter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="category_filesystem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\category_filesystem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="category_menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\category_menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
