minor mxdt addition and added new icons for stock icon and csp replace buttons

--- a/mexTool/GUI/Controls/MXCostumeEditor.resx
+++ b/mexTool/GUI/Controls/MXCostumeEditor.resx
@@ -120,6 +120,9 @@
   <metadata name="cspToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>125, 3</value>
   </metadata>
+  <metadata name="mxToolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>373, 3</value>
+  </metadata>
   <metadata name="mxToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>3, 3</value>
   </metadata>
