--- a/mexTool/Properties/Resources.resx
+++ b/mexTool/Properties/Resources.resx
@@ -157,6 +157,9 @@
   <data name="csp_export" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\csp_export.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="csp_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\csp_preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="csp_replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\csp_replace.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -198,6 +201,12 @@
   </data>
   <data name="left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_akaneia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_akaneia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_mex" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_mex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="minus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
